tests/neg/unused-imports.check
-- Error: tests/neg/unused-imports.scala:5:16 --------------------------------------------------------------------------
5 |import language.postfixOps // error
  |                ^^^^^^^^^^
  |                Unused import
-- Error: tests/neg/unused-imports.scala:6:24 --------------------------------------------------------------------------
6 |import scala.concurrent.* // error
  |                        ^
  |                        Unused import
-- Error: tests/neg/unused-imports.scala:11:43 -------------------------------------------------------------------------
11 |  import scala.collection.mutable.{HashMap as GoodMap, Seq as _, ListBuffer, Buffer, Set as OK} // error // error
   |                                   ^^^^^^^^^^^^^^^^^^
   |                                   Unused import
-- Error: tests/neg/unused-imports.scala:11:77 -------------------------------------------------------------------------
11 |  import scala.collection.mutable.{HashMap as GoodMap, Seq as _, ListBuffer, Buffer, Set as OK} // error // error
   |                                                                             ^^^^^^
   |                                                                             Unused import
-- Error: tests/neg/unused-imports.scala:51:38 -------------------------------------------------------------------------
51 |    import Givens.{given Ordering[C], *}, E.{given, *} // error // error // error
   |                                      ^
   |                                      Unused import
-- Error: tests/neg/unused-imports.scala:51:45 -------------------------------------------------------------------------
51 |    import Givens.{given Ordering[C], *}, E.{given, *} // error // error // error
   |                                             ^^^^^
   |                                             Unused import
-- Error: tests/neg/unused-imports.scala:51:52 -------------------------------------------------------------------------
51 |    import Givens.{given Ordering[C], *}, E.{given, *} // error // error // error
   |                                                    ^
   |                                                    Unused import
-- Error: tests/neg/unused-imports.scala:57:14 -------------------------------------------------------------------------
57 |    import E.{given, *}, Givens.{given Ordering[C], *} // error // error // error
   |              ^^^^^
   |              Unused import
-- Error: tests/neg/unused-imports.scala:57:21 -------------------------------------------------------------------------
57 |    import E.{given, *}, Givens.{given Ordering[C], *} // error // error // error
   |                     ^
   |                     Unused import
-- Error: tests/neg/unused-imports.scala:57:52 -------------------------------------------------------------------------
57 |    import E.{given, *}, Givens.{given Ordering[C], *} // error // error // error
   |                                                    ^
   |                                                    Unused import
